Refactor coupon list sorting and streamline code
- Changed sorting criteria for coupon list from 'id' to 'couponID'.
- Improved code efficiency by using .toList() method for stream conversion.